# eml-explore

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eml_explore/: __init__.py  _version.py  cli.py  commands.py
tests/: test_cli.py
